--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+examples/releve_CM_07_2025.txt
+examples/releve_CM_07_2025.pdf
+examples/releve_CM_07_2025.csv
+examples/releve_CM_07_2025_SG.csv
