Quite good, still some details to fix

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ examples/releve_CM_07_2025.txt
 examples/releve_CM_07_2025.pdf
 examples/releve_CM_07_2025.csv
 examples/releve_CM_07_2025_SG.csv
+bank_statement_comparison.txt
